--- a/Course/MazePath/Makefile
+++ b/Course/MazePath/Makefile
@@ -3,7 +3,7 @@ objects = main.o Maze.o SqStack.o
 test : $(objects)
 	clang++ -o test $(objects)
 main.o : Maze.h
-Maze.0 : Maze.h
+Maze.o : Maze.h
 SqStack.o : SqStack.h
 
 .PHONY : clean
